--- a/nrbcTestTask/src/appsettings.json
+++ b/nrbcTestTask/src/appsettings.json
@@ -1,7 +1,7 @@
 {
 	"NRBCTestTask": {
-		"ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=NRBCTestTask;Trusted_Connection=True;MultipleActiveResultSets=true"
-		//"ConnectionString": "Data Source=SQL6031.site4now.net;Initial Catalog=db_a872d2_nrbctesttask;User Id=db_a872d2_nrbctesttask_admin;Password=nrncTestTask21"
+		//"ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=NRBCTestTask;Trusted_Connection=True;MultipleActiveResultSets=true"
+		"ConnectionString": "Data Source=SQL6031.site4now.net;Initial Catalog=db_a872d2_test;User Id=db_a872d2_test_admin;Password=nrbcTestTask21"
 	},
 
 	"Logging": {
